--- a/FirstProject/appsettings.json
+++ b/FirstProject/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "Default": "Server=DESKTOP-U1FDP4S;Database=FirstProject; Trusted_Connection=true" }
 }
