--- a/FirstProject/FirstProject.csproj
+++ b/FirstProject/FirstProject.csproj
@@ -7,13 +7,23 @@
 	  
   </PropertyGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\signalr.min.js" />
+  </ItemGroup>
+
   
 
   <ItemGroup>
+    <None Include="wwwroot\assets\js\signalr.min.js" />
+    <None Include="wwwroot\js2\jquery-3.5.1.min.js" />
+    <None Include="wwwroot\js2\jquery-3.6.0.min.js" />
+    <None Include="wwwroot\js2\jquery.min.js" />
+    <None Include="wwwroot\js2\signalr.min.js" />
     <None Include="wwwroot\js\site.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.31" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.31" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.31" />
@@ -22,11 +32,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\AdminPanel\DataBase\" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
 </Project>
