--- a/FirstProject/FirstProject.csproj
+++ b/FirstProject/FirstProject.csproj
@@ -33,6 +33,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+    <PackageReference Include="Twilio" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
