--- a/FirstProject/appsettings.json
+++ b/FirstProject/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "Default": "Server=DESKTOP-U1FDP4S;Database=FirstProject; Trusted_Connection=true" }
+  "ConnectionStrings": { "Default": "Server=Alimov;Database=NewProject; Trusted_Connection=true" }
 }
